# crypto-news-aggregator

./: .benzinga-removal-status  .gitignore  .pre-commit-config.yaml  ACTION_ITEMS_SUMMARY.md  ADAPTIVE_THRESHOLD_IMPLEMENTATION.md  ARCHIVE_TAB_DEBUG_QUICKSTART.md  ARCHIVE_TAB_ISSUE_ANALYSIS.md  AUTH_SYSTEM_ANALYSIS.md  BACKFILL_ACTIONS_QUICK_START.md  BACKFILL_COMPLETE_SUMMARY.md  BACKFILL_NULL_FINGERPRINTS_GUIDE.md  BACKFILL_NULL_FINGERPRINTS_IMPLEMENTATION.md  BACKFILL_NULL_FINGERPRINTS_QUICKSTART.md  BACKFILL_READY_TO_RUN.md  BACKFILL_RESULTS.md  BACKFILL_SCRIPT_SUMMARY.md  BADGE_VISIBILITY_VERIFICATION.md  BENZINGA_BLACKLIST_FIX.md  BENZINGA_NARRATIVE_REMOVAL.md  BENZINGA_REMOVAL_COMPLETE.md  CHECK_RAILWAY_LOGS.md  CLAUDE-deprecated.md  CLAUDE.md  CLEANUP_SESSION_SUMMARY.md  CLUSTERING_LOGGING_ADDED.md  COMPLETE_WORK_SUMMARY.md  CONSERVATIVE_RATE_LIMITING.md  CONTRIBUTING.md  COST_OPTIMIZATION_SETUP.md  DEPLOYMENT_VERIFICATION.md  DEPLOY_NARRATIVE_ARTICLES_FIX.md  DUPLICATE_NARRATIVES_COMPLETE_SOLUTION.md  DUPLICATE_NARRATIVES_SUMMARY.md  ECHO_REACTIVATION_STATES_IMPLEMENTATION.md  ENTITY_CLASSIFICATION_MIGRATION.md  ENTITY_EXTRACTION_DEBUG.md  ENTITY_EXTRACTION_FIX_SUMMARY.md  ENTITY_NORMALIZATION_QUICK_REFERENCE.md  ENTITY_NORMALIZATION_SUMMARY.md  ENTITY_TYPE_DISPLAY_FIX.md  (+144 more)
.claude/agents/: code-editor.md  deep-research.md  git-ops.md  script-runner.md  test-runner.md
.claude/commands/: commit-and-push  docs-update.md  implement-ticket.md  session-start.md  test-write-run
.github/workflows/: ci.yml
.windsurf/memories/: custom.json
.windsurf/rules/: development-practices.md  testing-standards.md  ui-development.md  windsurf-rules.md
alembic/: env.py
alembic/versions/: 317ff996d653_add_raw_data_field_to_articles.py  365f9618af08_add_fields_to_sentiment_model.py  57b8d8a2e535_initial_migration.py  6e48650eed26_add_timezone_support_to_datetime_.py  72a1279d7a31_change_source_id_to_string_type.py  a1555ddf25dc_add_narrative_discovery_fields_to_.py  (+5 more)
context-owl-ui/: .env.example  DEPLOYMENT.md  DEPLOY_QUICK_START.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  verify-ui.js
docs/: BACKFILL_ENTITIES.md  CLEAN_NARRATIVES.md  ENTITY_EXTRACTION_403_FIX.md  ENTITY_EXTRACTION_FEATURE.md  ENTITY_NORMALIZATION.md  NARRATIVE_FINGERPRINT.md  QUICKSTART.md  README.md  SIGNALS_CACHING.md  WORKFLOW.md  codebase-exploration  coding-standards  current-sprint.md  logs.1770341413083.json  logs.1770353837638.json  logs.1770353860718.json  logs.1770354072004.json  session-start.md
examples/: fingerprint_similarity_demo.py  narrative_fingerprint_example.py  narrative_matching_example.py  semantic_boost_demo.py
scripts/: add_articles_to_dormant_narratives.py  add_fingerprint_validation_index.py  add_performance_indexes.py  analyze_archive_issue.py  analyze_duplicate_narratives.py  analyze_narrative_distribution.py  analyze_narrative_temporal_distribution.py  audit_analysis.py  audit_entity_types.py  audit_narrative_quality.py  backfill_article_sources.py  backfill_entities.py  backfill_entity_mention_sources.py  backfill_entity_mention_sources_v2.py  backfill_lifecycle_state.py  backfill_narrative_actions.py  backfill_narrative_fingerprints.py  backfill_narrative_focus.py  backfill_narratives.py  backfill_nucleus_entity.py  backfill_null_fingerprints.py  backfill_relevance_tiers.py  backfill_signal_scores.py  check_all_signals.py  check_article_mention_link.py  check_article_sources.py  check_article_themes.py  check_backfill_results.py  check_data_freshness.py  check_dormant_narratives.py  check_duplicate_narratives.py  check_entity_extraction_status.py  check_entity_status.py  check_entity_type_display.py  check_id_formats.py  check_lifecycle_state_coverage.py  check_narrative_coverage.py  check_narrative_states.py  check_narrative_status.py  check_new_sources.py  (+152 more)
tests/: conftest.py  test_async_basic.py  test_briefing_multi_pass.py  test_database_validation.py  test_news_collection_integration.py  test_news_collector.py  test_news_correlation.py  test_newsapi_integration.py  test_performance_monitoring.py  test_utils.py
(+456 files in other folders)
